# navstevalekara-watcher

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
templates/: admin.html  email_notification.html  index.html  watcher.html
